/*
 *  Copyright (C) 2023 â€“ 2024 Advanced Micro Devices, Inc. All rights reserved.
 *  Licensed under the MIT License.
 */
syntax = "proto3";
package vaip_core;

message VersionInfoProto {
    string package_name = 1;
    string commit = 2;
    string version = 3;
}

message AllVersionInfoProto {
    repeated VersionInfoProto  version_infos = 1;
}
